// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`spinner (isCI = false) > can be aborted by a signal 1`] = `
[
  "[?25l",
  "│
",
  "■  Canceled
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > indicator customization > custom delay 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ",
  "[1G",
  "[J",
  "⠙  ",
  "[1G",
  "[J",
  "⠹  ",
  "[1G",
  "[J",
  "⠸  ",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > indicator customization > custom frames 1`] = `
[
  "[?25l",
  "│
",
  "🐴  ",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > indicator customization > custom frames with lots of frame have consistent ellipsis display 1`] = `
[
  "[?25l",
  "│
",
  "0  ",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > message > sets message for next frame 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ",
  "[1G",
  "[J",
  "⠙  foo",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > process exit handling > prioritizes cancel option over global setting 1`] = `
[
  "[?25l",
  "│
",
  "■  Spinner cancel message
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > process exit handling > prioritizes error option over global setting 1`] = `
[
  "[?25l",
  "│
",
  "▲  Spinner error message
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > process exit handling > uses custom cancel message when provided directly 1`] = `
[
  "[?25l",
  "│
",
  "■  Custom cancel message
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > process exit handling > uses custom error message when provided directly 1`] = `
[
  "[?25l",
  "│
",
  "▲  Custom error message
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > process exit handling > uses default cancel message 1`] = `
[
  "[?25l",
  "│
",
  "■  Canceled
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > process exit handling > uses global custom cancel message from settings 1`] = `
[
  "[?25l",
  "│
",
  "■  Global cancel message
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > process exit handling > uses global custom error message from settings 1`] = `
[
  "[?25l",
  "│
",
  "▲  Global error message
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > start > handles multi-line messages 1`] = `
[
  "[?25l",
  "│
",
  "⠋  foo
bar
baz",
  "[2A",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > start > handles wrapping 1`] = `
[
  "[?25l",
  "│
",
  "⠋  xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
xxxxxxxxxxxxx",
  "[1A",
  "[1G",
  "[J",
  "◇  stopped
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > start > renders frames at interval 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ",
  "[1G",
  "[J",
  "⠙  ",
  "[1G",
  "[J",
  "⠹  ",
  "[1G",
  "[J",
  "⠸  ",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > start > renders message 1`] = `
[
  "[?25l",
  "│
",
  "⠋  foo",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > start > renders timer when indicator is "timer" 1`] = `
[
  "[?25l",
  "│
",
  "⠋   [0s]",
  "[1G",
  "[J",
  "◇   [0s]
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > stop > renders cancel symbol if code = 1 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ",
  "[1G",
  "[J",
  "■  
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > stop > renders error symbol if code > 1 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ",
  "[1G",
  "[J",
  "▲  
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > stop > renders message 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ",
  "[1G",
  "[J",
  "◇  foo
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > stop > renders message without removing dots 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ",
  "[1G",
  "[J",
  "◇  foo.
",
  "[?25h",
]
`;

exports[`spinner (isCI = false) > stop > renders submit symbol and stops spinner 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > can be aborted by a signal 1`] = `
[
  "[?25l",
  "│
",
  "■  Canceled
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > indicator customization > custom delay 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ...",
  "
",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > indicator customization > custom frames 1`] = `
[
  "[?25l",
  "│
",
  "🐴  ...",
  "
",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > indicator customization > custom frames with lots of frame have consistent ellipsis display 1`] = `
[
  "[?25l",
  "│
",
  "0  ...",
  "
",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > message > sets message for next frame 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ...",
  "
",
  "[1G",
  "[J",
  "⠙  foo...",
  "
",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > process exit handling > prioritizes cancel option over global setting 1`] = `
[
  "[?25l",
  "│
",
  "■  Spinner cancel message
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > process exit handling > prioritizes error option over global setting 1`] = `
[
  "[?25l",
  "│
",
  "▲  Spinner error message
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > process exit handling > uses custom cancel message when provided directly 1`] = `
[
  "[?25l",
  "│
",
  "■  Custom cancel message
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > process exit handling > uses custom error message when provided directly 1`] = `
[
  "[?25l",
  "│
",
  "▲  Custom error message
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > process exit handling > uses default cancel message 1`] = `
[
  "[?25l",
  "│
",
  "■  Canceled
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > process exit handling > uses global custom cancel message from settings 1`] = `
[
  "[?25l",
  "│
",
  "■  Global cancel message
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > process exit handling > uses global custom error message from settings 1`] = `
[
  "[?25l",
  "│
",
  "▲  Global error message
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > start > handles multi-line messages 1`] = `
[
  "[?25l",
  "│
",
  "⠋  foo
bar
baz...",
  "
",
  "[2A",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > start > handles wrapping 1`] = `
[
  "[?25l",
  "│
",
  "⠋  xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
xxxxxxxxxxxxx...",
  "
",
  "[1A",
  "[1G",
  "[J",
  "◇  stopped
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > start > renders frames at interval 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ...",
  "
",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > start > renders message 1`] = `
[
  "[?25l",
  "│
",
  "⠋  foo...",
  "
",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > start > renders timer when indicator is "timer" 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ...",
  "
",
  "[1G",
  "[J",
  "◇   [0s]
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > stop > renders cancel symbol if code = 1 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ...",
  "
",
  "[1G",
  "[J",
  "■  
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > stop > renders error symbol if code > 1 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ...",
  "
",
  "[1G",
  "[J",
  "▲  
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > stop > renders message 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ...",
  "
",
  "[1G",
  "[J",
  "◇  foo
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > stop > renders message without removing dots 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ...",
  "
",
  "[1G",
  "[J",
  "◇  foo.
",
  "[?25h",
]
`;

exports[`spinner (isCI = true) > stop > renders submit symbol and stops spinner 1`] = `
[
  "[?25l",
  "│
",
  "⠋  ...",
  "
",
  "[1G",
  "[J",
  "◇  
",
  "[?25h",
]
`;
